fluxcd/infrastructure/common/resources/linkerd/viz-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkerd
  namespace: linkerd-viz
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - linkerd.admin.${domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: web
          port: 8084
